--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div>
       <button id="add-row">Add a row</button>
       <select>
-        <!-- add options here! -->
+        <option value="red">Red</option>
+        <option value="blue">Blue</option>
       </select>
     </div>
     <table>
